# Yami

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: klines.db
docs/: ARCHITECTURE.md  GAME_ANALYSIS.md  HOLOGRAPHIC_COHERENCE.md
models/smoke_test/: final.pt  step_100.pt  step_150.pt  step_50.pt
models/v1_small/: final.pt  step_100.pt  step_150.pt  step_200.pt  step_250.pt  step_300.pt  step_350.pt  step_400.pt  step_450.pt  step_50.pt  step_500.pt  step_550.pt  step_600.pt  step_650.pt  step_700.pt  step_750.pt  step_800.pt  step_850.pt  step_900.pt  step_950.pt
models/v2_5k/: final.pt  step_100.pt  step_1000.pt  step_1050.pt  step_1100.pt  step_1150.pt  step_1200.pt  step_1250.pt  step_1300.pt  step_1350.pt  step_1400.pt  step_1450.pt  step_150.pt  step_1500.pt  step_1550.pt  step_1600.pt  step_1650.pt  step_1700.pt  step_1750.pt  step_1800.pt  step_1850.pt  step_1900.pt  step_1950.pt  step_200.pt  step_2000.pt  step_2050.pt  step_2100.pt  step_2150.pt  step_2200.pt  (+31 more)
results/: benchmark_results.json  full_benchmark.json  high_elo_benchmark.json  notable_games.json  phase1_results.json
scripts/: benchmark_elo.py  benchmark_full_metrics.py  benchmark_llm_chess.py  evaluate.py  generate_data.py  generate_elite_data.py  generate_gm_data.py  mine_klines.py  run_campaign.py  train.py
tests/: test_coherence.py  test_datagen.py  test_engine.py  test_gm_patterns.py  test_kline_memory.py  test_knowledge_graph.py  test_legal_moves.py  test_navigator.py  test_negative_learning.py  test_neural.py  test_tactical_scoper.py  test_temporal_controller.py
(+611 files in other folders)
